AC_INIT(tap, 1.0)
AC_CONFIG_SRCDIR(src/tap.c)
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

# Checks for libraries
AC_CHECK_LIB([pthread], [pthread_mutex_lock])

# Checks for header files
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

# Checks for  typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit])

AC_CONFIG_FILES([Makefile
		 src/Makefile
		 src/t/Makefile
		 src/t/diag/Makefile
		 src/t/fail/Makefile
		 src/t/ok/Makefile
		 src/t/ok/ok-hash/Makefile
		 src/t/ok/ok-numeric/Makefile
		 src/t/ok/ok/Makefile
		 src/t/pass/Makefile
		 src/t/plan/Makefile
		 src/t/plan/no-tests/Makefile
		 src/t/plan/no_plan/Makefile
		 src/t/plan/not-enough-tests/Makefile
		 src/t/plan/sane/Makefile
		 src/t/plan/skip_all/Makefile
		 src/t/plan/too-many-plans/Makefile
		 src/t/plan/too-many-tests/Makefile
		 src/t/skip/Makefile
		 src/t/todo/Makefile
		])
AC_OUTPUT
